@@ -28,6 +28,7 @@ BEGIN_PLUGIN_LIBRARY(yarpmod)
   add_subdirectory(urbtc)
   add_subdirectory(dimax_u2c)
   add_subdirectory(DynamixelAX12Ftdi)
+  add_subdirectory(laserHokuyo)
 
   # We can include remote directories as well - we specify a 
   # local directory for producing binaries so there is no interference
