@@ -1,0 +1,7 @@
+Driver for Hokuyo UTM30-LX laser range finder.
+
+Copyright: Marco Randazzo, October 2010.
+CopyPolicy: Released under the terms of the LGPLv2.1 or later, see LGPL.TXT
+
+IMPORTANT: This driver is currently under debug/development. 
+Documentation will be added as soon as the final version of the driver is released.
